# SeapoPym-JAX

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  REVIEW_2025_01.md  SOLUTION_AUDIT.md  TODO.md  WORKFLOW_STATE.md  benchmark_full_lmtl.py  benchmark_transport.py  coverage.json  mkdocs.yml  package-lock.json  pyproject.toml  pyrightconfig.json  sparse-observations-redesign.md  test_lmtl_thermal_sensitivity.py  test_lmtl_units.py
.github/workflows/: ci.yml  docs.yml
IA/: 01_MultiGroup_Architecture_Analysis.md  02_Roadmap_MultiGroup.md  04_example_declarative.md  05_Xarray_And_Aliasing.md  05_blueprint_NetworkX.md  Advection-upwind-description.md  Composant_Blueprint.md  Composant_Functional_Group.md  Composant_Global_State_Manager.md  Composant_Writer.md  Diffusion-euler-explicite-description.md  INTEGRATION_PLAN.md  JAX.md  Plan_Resolution_Efficacite_Dask.md  Plan_Tests_Chunking_Dask.md  Question_equations.md  Rapport_Tests_Chunking.md  TODO.md  TRANSPORT_ANALYSIS.md  TRANSPORT_COMPARISON.md  TRANSPORT_IMPLEMENTATION_PLAN.md  WORKFLOW_STATE.md  ZOOPLANKTON_IMPLEMENTATION_PLAN.md  architecture-2d.md  architecture-revisited.md  architecture_status.md  benchmark_global_lmtl.py  comments.md  forcing.md  implementation-plan.md  islands-flux-blocking.md  jax-cfd-integration.md  prototype-plan.md  transport-advection.md  transport-architecture-comparison.md  transport-strategy.md  transport-worker-refactoring.md
IA/ARCHIVE/: 00_COHERENCE_ANALYSIS.md
IA/Article/: 01_Introduction.md  01_Introduction_Draft.md  02_Methode.md  02_Methode_DAG.md  03_Resultats.md  03_Resultats_Discussion_Ideas.md  04_Discussion.md  04_Notebooks_Experimentaux_Spec.md  Article 2 SeapoPym v0 2 2e9b3bbf9a07806e8f2bcda44851b96e.md
IA/DESIGN/: 01_BLUEPRINT_DATA.md  03_ENGINE.md  04_PARALLELISM.md  WORKFLOW_STATE.md
IA/LMTL ADRE/: SEAPODYM_numerical_scheme.md  SEAPODYM_numerical_scheme_COMPLETE.md  SEAPODYM_transformations_critiques.md
IA/PLAN/: 00_COHERENCE_ANALYSIS.md  DASK_LAZY_LOADING.md  MEMORY_WRITER_COORDS_FIX.md  OVERVIEW.md  SPEC_01_BLUEPRINT_DATA.md  SPEC_02_COMPILER.md  SPEC_03_ENGINE.md  SPEC_04_PARALLELISM.md  SPEC_05_AUTODIFF.md  WORKFLOW_STATE_01_BLUEPRINT.md  WORKFLOW_STATE_02_COMPILER.md  WORKFLOW_STATE_03_2_TIME_CALENDAR.md  WORKFLOW_STATE_03_3_OUTPUTS.md  WORKFLOW_STATE_03_4_DIMENSIONS_VMAP.md  WORKFLOW_STATE_03_ENGINE.md  WORKFLOW_STATE_04_GRADIENT_OPTIMIZATION.md  WORKFLOW_STATE_05_EVOLUTIONARY_OPTIMIZATION.md  WORKFLOW_STATE_06_TRANSPORT_JAX.md  WORKFLOW_STATE_07_MIGRATION_SCRIPTS.md  WORKFLOW_STATE_08_SOBOL_SENSITIVITY.md  issue_time_interpolation.md
IA/Synthese/: Synthèse_discussion_gemini.md
IA/WORKFLOW/: WORKSTATE_1_PRIORS.md  WORKSTATE_2_LOGPOSTERIOR.md  WORKSTATE_3_NUTS.md  WORKSTATE_4_IPOP_CMAES.md  WORKSTATE_5_PIPELINE.md
IA/WORKFLOW_COMPILER/: WORKFLOW_STATE.md  prompt.md
IA/WORKFLOW_ENGINE/: WORKFLOW_STATE.md
IA/WORKFLOW_OPTIMIZER/: WORKFLOW_STATE.md  prompt.md
IA/WORKFLOW_RUNNER/: WORKFLOW_STATE.md
IA/composants/: Composant_Blueprint.md  Composant_Forcing_Manager.md  Composant_Orchestrateur.md  Composant_RESUME.md  Composant_Time_integrator.md
IA/draft/: Annexe A – Formulation du modèle sans transport.md  functions.md
IA/plan/: 01_Blueprint_Plan.md  01_units_and_parameters.md  (+15 more)
benchmarks/: README.md  __init__.py  benchmark_utils.py  cpu_gpu_comparison.py  inspect_chunking.py  memory_profiler.py  profile_jax.py  profile_production_dynamics.py  ray_overhead_analysis.py  run_benchmarks.py  scaling_analysis.py
discussion/: 1.md  2.md  3.md  4.md  5.md
docs/: index.md  memory_analysis.md  migration_units.md
examples/: 01_lmtl_no_transport.py  02_transport_zalesak_jax.py  03_benchmark_cpu_vs_gpu.py  03_benchmark_vmap_vs_grid.py  03b_benchmark_grid_scaling.py  04_benchmark_lazy_loading.py  04_benchmark_time_chunking.py  04_optimization_comparison_lmtl_0d.py  04b_benchmark_lazy_loading.py  04b_benchmark_writers.py  04b_noise_optimization_comparison_lmtl_0d.py  05_ipop_cmaes_lmtl_0d.py  05b_ga_lmtl_0d.py  05b_noise_ipop_cmaes_lmtl_0d.py  06_ipop_cmaes_2groups_lmtl_0d.py  06b_ga_2groups_lmtl_0d.py  06b_noise_ipop_cmaes_2groups_lmtl_0d.py  07_ga_2groups_lmtl_transport.py  07_pipeline_cmaes_nuts_lmtl_0d.py  07b_noise_pipeline_cmaes_nuts_lmtl_0d.py  08_benchmark_disk_vs_memory.py  08_cmaes_vs_ga_lmtl_0d.py  08_multistart_gradient_lmtl_0d.py  09_memory_profile_simulation.py  advection_blob.py  advection_diffusion.py  benchmark_gpu_memory.py  benchmark_lmtl_cpu_vs_gpu.py  benchmark_sobol_cpu_vs_gpu.py  diffusion_blob.py  forcing_example.py  full_model_0d.py  integrated_bio_transport_demo.ipynb  ipop_cmaes_2groups_lmtl_0d.py  ipop_cmaes_lmtl_0d.py  lmtl_0d_implementations_benchmark.py  lmtl_2d.py  mask_usage_example.py  nuts_lmtl_0d.py  optimization_0d.py  (+13 more)
notebook/: 01_Blueprint_Visualization.ipynb  01_Predator_Prey_Model.ipynb  02_Predator_Prey_Model.ipynb  03_Dynamic_Forcings_Demo.ipynb  04_Dask_Backend_Demo.ipynb  05_LMTL_Model_Demo.ipynb  06_transport_demo.ipynb  07_a_Transport_LMTL_Run.ipynb  07_b_Global_LMTL_Run copy.ipynb  07_b_Global_LMTL_Run.ipynb  07_b_Transport_LMTL_Run.ipynb  08_b_comparison_with_transport.ipynb  08_comparison_seapopym.ipynb
notebooks/: multi_group_demo.ipynb
seapopym/: __init__.py  dims.py  types.py
tests/: __init__.py  backend_test_helpers.py  conftest.py  test_backend_dask.py  test_backend_data_parallel.py  test_backend_distributed.py  test_backend_ray.py  test_backend_sequential.py  test_backend_task_parallel.py  test_blueprint.py  test_blueprint_state.py  test_controller.py  test_forcing.py  test_functional_group.py  test_gsm.py  test_io_writer.py  test_lmtl.py  test_lmtl_dask_efficiency.py  test_lmtl_thermal_sensitivity.py  test_lmtl_timestep.py  test_lmtl_units.py  test_optimized_functions.py  test_transport.py  test_transport_boundaries.py  test_transport_chunking.py  test_transport_combined.py  test_transport_dask_efficiency.py  test_transport_numba.py  test_transport_stability.py
(+432 files in other folders)
