[project]
name = "seapopym-message"
version = "0.1.0"
description = "Distributed population dynamics simulation using Ray and JAX"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["population-dynamics", "ray", "jax", "oceanography", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "jax[cpu]>=0.4.20",
    "ray[default]>=2.9.0",
    "xarray>=2023.12.0",
    "zarr>=2.16.1",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "netcdf4>=1.6.0",
    "dask>=2023.12.0",
    "matplotlib>=3.8.0",
    "jax-cfd>=0.2.0",
    "networkx>=3.0",
    "bokeh>=3.8.1",
    "distributed>=2025.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "ipykernel>=6.27.0",
    "jupyter>=1.0.0",
    "types-networkx>=3.0",
    "pandas-stubs>=2.0.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

viz = [
    "matplotlib>=3.8.0",
    "cartopy>=0.22.0",
    "seaborn>=0.13.0",
]

all = [
    "seapopym-message[dev,docs,viz]",
]

[project.urls]
Homepage = "https://github.com/yourusername/seapopym-message"
Documentation = "https://seapopym-message.readthedocs.io"
Repository = "https://github.com/yourusername/seapopym-message"
Issues = "https://github.com/yourusername/seapopym-message/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["seapopym"]

# ══════════════════════════════════════════════════════════════
# RUFF Configuration
# ══════════════════════════════════════════════════════════════

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

# Source directories
src = ["seapopym", "tests"]

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex (handled case by case)
    "W191",  # indentation contains tabs
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces, not tabs
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Auto-detect line ending
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["seapopym"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["ARG"]  # Allow unused arguments in tests
"examples/**/*.py" = ["ARG", "ANN"]  # Allow unused arguments and missing annotations in examples

# ══════════════════════════════════════════════════════════════
# MYPY Configuration
# ══════════════════════════════════════════════════════════════

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false  # JAX decorators often untyped
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
explicit_package_bases = true
exclude = ["examples/"]

# Ignore missing imports for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "ray.*",
    "jax.*",
    "jax_cfd.*",
    "xarray.*",
    "zarr.*",
    "netCDF4.*",
    "cartopy.*",
    "matplotlib.*",
    "pandas.*",
    "dask.*",
    "distributed.*",
]
ignore_missing_imports = true

# Skip type checking for examples
[[tool.mypy.overrides]]
module = "examples.*"
ignore_errors = true

# Skip type checking for benchmarks (utility scripts)
[[tool.mypy.overrides]]
module = "benchmarks.*"
ignore_errors = true

# ══════════════════════════════════════════════════════════════
# PYTEST Configuration
# ══════════════════════════════════════════════════════════════

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=seapopym",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
]

# ══════════════════════════════════════════════════════════════
# COVERAGE Configuration
# ══════════════════════════════════════════════════════════════

[tool.coverage.run]
source = ["seapopym"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstract",
]

[dependency-groups]
dev = []
