[project]
name = "seapopym"
version = "0.1.0"
description = "Distributed population dynamics simulation using Ray and JAX"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["population-dynamics", "ray", "jax", "oceanography", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "xarray>=2023.12.0",
    "zarr>=2.16.1",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "netcdf4>=1.6.0",
    "dask>=2023.12.0",
    "matplotlib>=3.8.0",
    "networkx>=3.0",
    "bokeh>=3.8.1",
    "distributed>=2025.11.0",
    "pint>=0.24.4",
    "pint-xarray>=0.5.1",
    "numba>=0.63.1",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "pyright>=1.1.340",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "ipykernel>=6.27.0",
    "jupyter>=1.0.0",
    "types-networkx>=3.0",
    "pandas-stubs>=2.0.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

viz = [
    "matplotlib>=3.8.0",
    "cartopy>=0.22.0",
    "seaborn>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/seapopym-message"
Documentation = "https://seapopym-message.readthedocs.io"
Repository = "https://github.com/yourusername/seapopym-message"
Issues = "https://github.com/yourusername/seapopym-message/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["seapopym"]

# ══════════════════════════════════════════════════════════════
# RUFF Configuration
# ══════════════════════════════════════════════════════════════

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["seapopym", "tests"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "seapopym/_legacy",
    "tests/_legacy",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "S101", # flake8-bandit: assert used
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex (handled case by case)
    "W191",  # indentation contains tabs
    "E111",  # indentation is not a multiple of four
    "E114",  # indentation is not a multiple of four (comment)
    "E117",  # over-indented
    "D206",  # docstring indentation
    "D300",  # use triple double quotes
    "Q000",  # bad quotes inline
    "Q001",  # bad quotes multiline
    "Q002",  # bad quotes docstring
    "Q003",  # avoidable escaped quote
    "COM812", # missing trailing comma
    "COM819", # prohibited trailing comma
    "ISC001", # implicit string concatenation
    "ISC002", # implicit string concatenation line jump
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces, not tabs
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Auto-detect line ending
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["seapopym"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "S101"]

# ══════════════════════════════════════════════════════════════
# PYRIGHT Configuration
# ══════════════════════════════════════════════════════════════

[tool.pyright]
include = ["seapopym", "tests"]
exclude = ["**/node_modules", "**/__pycache__", "examples", "benchmarks", "seapopym/_legacy", "tests/_legacy"]
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
typeCheckingMode = "basic"

# ══════════════════════════════════════════════════════════════
# PYTEST Configuration
# ══════════════════════════════════════════════════════════════

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
norecursedirs = ["_legacy"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=seapopym",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
]

# ══════════════════════════════════════════════════════════════
# COVERAGE Configuration
# ══════════════════════════════════════════════════════════════

[tool.coverage.run]
source = ["seapopym"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstract",
]

[dependency-groups]
dev = []
