[project]
name = "seapopym"
version = "0.2.0"
description = "JAX-accelerated framework for Eulerian population dynamics on N-dimensional grids"
authors = [
    {name = "Jules Lehodey", email = "lehodey.jules@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["population-dynamics", "jax", "eulerian", "simulation", "oceanography", "differentiable", "gpu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "xarray>=2023.12.0",
    "zarr>=2.16.1",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "dask>=2023.12.0",
    "pint>=0.24.4",
    "pint-xarray>=0.5.1",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "optax>=0.2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pyright>=1.1.340",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "pandas-stubs>=2.0.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "ipykernel>=6.27.0",
    "jupyter>=1.0.0",
]

gpu = [
    "jax[cuda12]>=0.4.20",
]

optimization = [
    "evosax>=0.1.0",
]

viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/Ash12H/SeapoPym-JAX"
Documentation = "https://ash12h.github.io/SeapoPym-JAX/"
Repository = "https://github.com/Ash12H/SeapoPym-JAX"
Issues = "https://github.com/Ash12H/SeapoPym-JAX/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["seapopym"]

# ══════════════════════════════════════════════════════════════
# RUFF Configuration
# ══════════════════════════════════════════════════════════════

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["seapopym", "tests"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "S101", # flake8-bandit: assert used
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex (handled case by case)
    "W191",  # indentation contains tabs
    "E111",  # indentation is not a multiple of four
    "E114",  # indentation is not a multiple of four (comment)
    "E117",  # over-indented
    "D206",  # docstring indentation
    "D300",  # use triple double quotes
    "Q000",  # bad quotes inline
    "Q001",  # bad quotes multiline
    "Q002",  # bad quotes docstring
    "Q003",  # avoidable escaped quote
    "COM812", # missing trailing comma
    "COM819", # prohibited trailing comma
    "ISC001", # implicit string concatenation
    "ISC002", # implicit string concatenation line jump
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces, not tabs
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Auto-detect line ending
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["seapopym"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "S101", "E402"]

# ══════════════════════════════════════════════════════════════
# PYRIGHT Configuration
# ══════════════════════════════════════════════════════════════

[tool.pyright]
include = ["seapopym", "tests"]
exclude = ["**/node_modules", "**/__pycache__", "examples", "benchmarks"]
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.12"
typeCheckingMode = "basic"

# ══════════════════════════════════════════════════════════════
# PYTEST Configuration
# ══════════════════════════════════════════════════════════════

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=seapopym",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
]

# ══════════════════════════════════════════════════════════════
# COVERAGE Configuration
# ══════════════════════════════════════════════════════════════

[tool.coverage.run]
source = ["seapopym"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstract",
]

[dependency-groups]
dev = [
    "vulture>=2.14",
]
